src/tailwind.css
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

@layer base {
  :root {
    --jet-selected: #0e7297;
    --amazon-selected: #e47911;
    --flipkart-selected: #2874f0;
    --jet-selected-light: #d6eef7;
    --amazon-selected-light: #fdebda;
    --flipkart-selected-light: #dae7fc;
  }
  body {
    @apply overflow-hidden bg-[#fbf9f8];
  }

  .transition-effect {
    @apply transition-all ease-in duration-300;
  }

  .backdrop-filter {
    @apply absolute w-full h-screen opacity-50 bg-black;
  }
  .content-layout {
    @apply py-1 md:py-2 px-2;
  }
  .panel {
    @apply bg-white border-[#e3e3e2] border rounded-md overflow-auto;
  }
  .auto-hide-scrollbar {
    @apply pl-1 h-96 border overflow-hidden hover:overflow-auto pr-[6px] hover:pr-0;
  }

  /* width */
  ::-webkit-scrollbar {
    width: 6px;
    height: 6px;
    background: white;
  }

  /* Track */
  ::-webkit-scrollbar-track {
    border-radius: 6px;
    background: rgb(230, 228, 228);
  }

  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: lightgray;
    border-radius: 5px;
  }

  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: gray;
  }
}

